--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
     <div class="contacts">
         <ul class="contacts__list">
-            <li class="contacts__item"><a href="" target="_blank">Ссылка на проект</a></li>
-            <li class="contacts__item"><a href="" target="_blank">К 1 заданию</a></li>
+            <li class="contacts__item"><a href="https://merantauw.github.io/mst-test-2/" target="_blank">Ссылка на проект</a></li>
+            <li class="contacts__item"><a href="https://merantauw.github.io/mst-test/" target="_blank">К 1 заданию</a></li>
         </ul>
     </div>
 </main>
