--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="initial-scale=1, width=device-width"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="assets/images/favicon.png" type="image/png">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="assets/favicon.png" type="image/png">
 
-    <title>IELTS Success | Your path to success</title>
+    <title>MST project 2 | dynamic sizes + adding elements</title>
     <meta name="description"
           content="IELTS Success is your ultimate resource for professional development and career growth. Explore our tools, guides, and resources to achieve your goals.">
 
